src/test/deca/syntax/invalid/affectation-wrongTypeAffectation.deca
{
   int a = 2;
   boolean b = true;
   a = b;
}
